fix: add overflow for footer (#7)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -182,6 +182,7 @@ body {
 /*------------------------------------------footer----------------------------------*/
 .footer {
   position: relative;
+  overflow-x: hidden;
 }
 
 .footer-animation {
